src/pages/clippingsMgr.css
/* ... */
#custom-placeholder-dlg .input-error,
#numeric-placeholder-dlg .input-error {
    background-color: pink;
}

#insert-date-time-placeholder-dlg {
    --width: 306px;
    --height: 340px;
    top: 14px;
}

#clipping-missing-src-url-msgbox {
    --width: 430px;
}

#shortcut-key-conflict-msgbox .msgbox-icon {
    margin-top: 8px;
}

#shortcut-list-dlg {
    --width: 424px;
    --height: 324px;
    top: 18px;
}

body[data-locale="nl"] #shortcut-list-dlg #shortcut-instrxns {
    letter-spacing: -0.38px;
}

body[data-locale="fr"] #shortcut-list-dlg #shortcut-instrxns {
    letter-spacing: -0.16px;
}

body[data-locale="de"] #shortcut-list-dlg #shortcut-instrxns {
    letter-spacing: -0.32px;
}


#shortcut-list-dlg > .dlg-btns {
    width: 100%;
}

#shortcut-list-dlg > .dlg-btns > #export-shct-list {
    order: 1;
    flex: 0 1 auto;
    margin-left: 22px;
}

#shortcut-list-dlg > .dlg-btns > #shortcut-list-btns-spacer {
    order: 2;
    flex: 1 1 auto;
}

#shortcut-list-dlg > .dlg-btns > .dlg-accept {
    order: 3;
    flex: 0 1 auto;
}

#shortcut-list-content {
    margin-left: -16px;
    margin-right: -16px;
    height: calc(100% - var(--toolbar-height));
}

#shortcut-list-content table {
    margin-left: 16px;
    width: calc(100% - 20px);
    border-collapse: collapse;
    border-spacing: 0;
    border-left: 1px solid var(--color-th-border);
}

#shortcut-list-content table > thead {
    display: block;
    height: 20px;
    border-top: 1px solid var(--color-th-border);
    color: var(--color-default-text);
}

#shortcut-list-content table > thead > tr {
    border-right: 1px solid var(--color-th-border);
    background-color: var(--color-th-bkgd);
}

#shortcut-list-content table > thead > tr > th {
    padding: 2px 4px 2px 4px;
    border-bottom: 1px solid var(--color-th-border);
    font-weight: normal;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 90px;
}

#shortcut-list-content table > thead > tr > th:nth-child(1) {
    border-right: 1px solid var(--color-th-border);
}

#shortcut-list-content table > tbody {
    display: block;
    height: 160px;
    margin-top: 2px;
    overflow-x: hidden;
    overflow-y: scroll;
    border-bottom: 1px solid var(--color-th-border);
}

#shortcut-list-content table > tbody > tr {
    height: 20px;
}

#shortcut-list-content table > tbody > tr > td {
    padding-left: 4px;
    padding-right: 4px;
}

#shortcut-list-content table th:nth-child(1),
#shortcut-list-content table td:nth-child(1) {
    min-width: 90px;
}

#shortcut-list-content table th:nth-child(2),
#shortcut-list-content table td:nth-child(2) {
    width: 100%;
    max-width: 100px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#import-dlg {
    --width: 408px;
    --height: 206px;
    top: 40px;
}

body[data-locale="de"] #import-dlg {
    width: 450px;
}

#import-dlg #import-clippings-filepicker {
    width: 100%;
    margin-top: 2px;
    margin-bottom: 12px;
}

#import-dlg #import-clippings-file-path {
    order: 1;
    flex: 1 1 auto;
    margin-right: 4px;
    background-color: transparent;
}

#import-dlg #import-clippings-file-path:placeholder-shown {
    border: none;
    background-image: url("../img/tbd-edge-l.svg"), url("../img/tbd-bg.svg"), url("../img/tbd-edge-r.svg");
    background-position: left, center, right;
    background-repeat: no-repeat, repeat-x, no-repeat;
    opacity: 1;
}

#import-dlg #import-clippings-file-path {
    border: none;
    background-image: url("../img/tbd-edge-l.svg"), url("../img/tbd-bg-bot.svg"), url("../img/tbd-edge-r.svg");
    background-position: left, center, right;
    background-repeat: no-repeat, repeat-x, no-repeat;
}

#import-dlg #import-clippings-browse {
    order: 2;
    flex: 0 1 auto;
    
    min-width: 72px;
}

#import-dlg #import-clippings-file-upload {
    opacity: 0;
    width: 0px;
    height: 0px;
}

#import-dlg #restore-backup-warning {
    display: none;   
}

#import-dlg #restore-backup-warning > .warning-icon {
    float: left;
    width: 22px;
    height: 22px;
    margin-top: 4px;
    background-image: url("../img/warning-64.png");
    background-repeat: no-repeat;
    background-size: contain;
}

body[data-os="win"] #import-dlg #restore-backup-warning > .warning-icon {
    background-image: url("../img/alert-win.png");
}

#import-dlg #restore-backup-warning > .warning-icon[os="mac"] {
    background-image: url("../img/warning-64-mac.png");
}

#import-dlg #restore-backup-warning > p {
    min-height: 60px;
    margin: 0px 0px 0px 28px;
    padding: 8px;
    border-radius: 4px;
    background-color: #fbfb77;
    color: black;
}

body[data-locale="de"] #import-dlg #restore-backup-warning > p {
    letter-spacing: -0.30px;
}

#import-dlg progress {
    display: none;
    width: 355px;
    margin-top: 12px;
}

#import-dlg #import-error {
    display: none;
    margin-top: 8px;
    color: var(--color-error-text);
}

#export-dlg {
    --width: 360px;
    --height: 296px;
    top: 22px;
}

#export-dlg #export-format-list,
#insert-date-time-placeholder-dlg #date-time-format-list {
    width: 100%;
    margin-top: 4px;
    margin-bottom: 4px;
    border: 1px solid var(--color-cb-border);
}

#export-dlg #export-format-list-label {
    display: block;
}

body[data-locale="de"] #export-dlg #export-format-list-label {
    letter-spacing: -0.64px;
}

#export-dlg fieldset {
    margin-top: 6px;
    margin-bottom: 8px;
    height: 106px;
}

#export-dlg #format-description {
    margin-top: 2px;
    margin-bottom: 2px;
}

#import-confirm-msgbox > .msgbox-icon,
#export-confirm-msgbox > .msgbox-icon,
#backup-confirm-msgbox > .msgbox-icon,
#sync-fldr-full-error-msgbox > .msgbox-icon {
    margin-top: 8px;
}

#import-confirm-msgbox {
    --width: 406px;
}

#delete-sync-fldr-msgbox {
    --width: 510px;
}

#move-sync-fldr-msgbox {
    --width: 318px;
}

#move-dlg {
    --width: 342px;
    --height: 304px;
    top: 24px;
}
/* ... */

